--- a/src/components/Stepper/Stepper.css
+++ b/src/components/Stepper/Stepper.css
@@ -43,7 +43,7 @@
   /* border: red solid 2px; */
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 422px) {
   .stepper {
     background-color: transparent !important;
   }
